# silvia-castillo

./: AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bindings/: Chain.ts  ChainView.ts  CheckResult.ts  ExecuteResult.ts  HostView.ts  LevelInfo.ts  LevelView.ts  Match.ts  MatchKind.ts  Packet.ts  ParsedRule.ts  PortSpec.ts  Progress.ts  ProgressView.ts  Proto.ts  RuleCommand.ts  RuleView.ts  RulesetView.ts  Table.ts  Target.ts  TestResult.ts  Trace.ts  TraceStep.ts
src-tauri/src/: commands.rs  lib.rs  main.rs  solutions_test.rs  state.rs
src-tauri/src/engine/: ast.rs  matchers.rs  mod.rs  packet.rs  parser.rs  pipeline.rs  ruleset.rs  topology.rs  trace.rs
src-tauri/src/levels/: mod.rs
src-tauri/src/levels/data/: 01-observar.yaml  02-primer-guardia.yaml  03-bloquear-tipo.yaml  04-politica-drop.yaml  05-tres-portones.yaml  06-barbacana.yaml  07-estandarte.yaml  08-puerta-secreta.yaml  09-examen-silvia.yaml
src-tauri/src/progress/: mod.rs
src/lib/: audio.svelte.ts
src/lib/components/console/: Console.svelte
src/lib/tauri/: commands.ts  types.ts
src/routes/: +page.svelte
src/routes/level/[n]/: +page.svelte
