[package]
name = "silvia-castillo"
version = "0.1.0"
description = "Silvia Castillo — aprende iptables jugando"
authors = []
edition = "2021"

[lib]
name = "silvia_castillo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winnow = "0.6"
serde_yml = "0.0.12"
ts-rs = { version = "10", features = ["serde-compat"] }
